fix popup anchor and add option to collapse description

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,18 +25,32 @@ a {
   top: 10px;
   background-color: white;
   z-index: 1000;
-  padding: 20px;
+  padding: 14px 20px;
   border-radius: 10px;
   max-width: 200px;
+
+  button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    display: block;
+    margin: 10px auto 0 auto;
+  }
+
+  h1,
+  select {
+    font-size: 16px;
+  }
+
+  h1 {
+    line-height: 24px;
+    margin: 0;
+  }
 }
 
 .minimal-popup {
   z-index: 1000;
   box-shadow: 0 5px 10px $COLOR_BOX_SHADOW, 0 15px 40px $COLOR_BOX_SHADOW;
-}
-
-select {
-  font-size: 16px;
 }
 
 .minimal-marker {
